# text-upload

./: .gitignore  README.md
simple-text/: Cargo.toml
simple-text/src/: api.rs  config.rs  git_management.rs  main.rs
test-buffers/: places.md
